# AI-Tools

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTRODUCTION.md  LICENSE  NOTICE  PUBLISHING.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  conversation_history.py  rag_compression.py
src/tokentrim/: __init__.py  __main__.py  cli.py  config.py  core.py  dedup.py  fidelity.py  mcp_server.py  pricing.py  proxy.py  redact.py  router.py  samples.py  stats.py  store.py  tokens.py
src/tokentrim/compressors/: __init__.py  base.py  code_compressor.py  json_compressor.py  log_compressor.py  rag_compressor.py  text_compressor.py
tests/: test_cli_setup.py  test_compressors.py  test_core.py  test_quality_dedup.py  test_redact_store.py  test_router.py
