[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tokentrim"
version = "0.1.0"
description = "Compress everything your AI agent reads — tool outputs, logs, RAG chunks, files, and conversation history — before it reaches the LLM. Same answers, a fraction of the tokens."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sam Gupta" }]
keywords = [
    "llm",
    "context",
    "compression",
    "tokens",
    "rag",
    "agents",
    "mcp",
    "proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
proxy = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
mcp = ["mcp>=1.2.0"]
tokens = ["tiktoken>=0.6"]
all = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.2.0",
    "tiktoken>=0.6",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
tokentrim = "tokentrim.cli:main"

[project.urls]
Homepage = "https://github.com/sam00/AI-Tools"
Repository = "https://github.com/sam00/AI-Tools"
Issues = "https://github.com/sam00/AI-Tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tokentrim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
